resources/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: via
  name: via
spec:
  replicas: 1
  selector:
    matchLabels:
      app: via
  template:
    metadata:
      labels:
        app: via
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: via-cfg

      containers:
        - name: via
          image: docker.io/chtime/via
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /volumes/volume-path
