resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: via
    app.kubernetes.io/part-of: via-app
  name: via
spec:
  selector:
    app: via
  type: ClusterIP
  ports:
    - name: "8000"
      port: 8000
      protocol: TCP
      targetPort: 8000
