resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: via
    app.kubernetes.io/part-of: via-app
  name: via
spec:
  port:
    targetPort: 8000
  tls:
    termination: edge
  to:
    kind: Service
    name: via
    weight: 100
